@@ -34,6 +34,8 @@ namespace Castle.Facilities.WcfIntegration.Tests
 	using log4net.Config;
 	using NUnit.Framework;
 
+	using log4net.Core;
+
 	[TestFixture]
 	public class ServiceHostFixture
 	{
@@ -462,7 +464,46 @@ namespace Castle.Facilities.WcfIntegration.Tests
 				}
 				catch
 				{
-					foreach (var log in memoryAppender.GetEvents())
+					var events = memoryAppender.GetEvents();
+					Assert.AreEqual(1, events.Length);
+					foreach (var log in events)
+					{
+						Assert.AreEqual("An error has occurred", log.RenderedMessage);
+						Assert.AreEqual("Oh No!", log.ExceptionObject.Message);
+					}
+				}
+			}
+		}
+
+		[Test]
+		public void Will_apply_multiple_error_handlers_to_service()
+		{
+			using (RegisterLoggingFacility(new WindsorContainer())
+				.AddFacility<WcfFacility>(f => f.CloseTimeout = TimeSpan.Zero)
+				.Register(
+					Component.For<ErrorLogger>(),
+					Component.For<ErrorLogger>().Named("other"),
+					Component.For<IOperationsEx>().ImplementedBy<Operations>()
+					.DependsOn(new { number = 42 })
+					.AsWcfService(new DefaultServiceModel().AddEndpoints(
+						WcfEndpoint.BoundTo(new NetTcpBinding { PortSharingEnabled = true })
+							.At("net.tcp://localhost/Operations"))
+						)
+				))
+			{
+				var client = ChannelFactory<IOperationsEx>.CreateChannel(
+					new NetTcpBinding { PortSharingEnabled = true }, new EndpointAddress("net.tcp://localhost/Operations"));
+
+				try
+				{
+					client.ThrowException();
+					Assert.Fail("Should have raised an exception");
+				}
+				catch
+				{
+					var events = memoryAppender.GetEvents();
+					Assert.AreEqual(2, events.Length);
+					foreach (var log in events)
 					{
 						Assert.AreEqual("An error has occurred", log.RenderedMessage);
 						Assert.AreEqual("Oh No!", log.ExceptionObject.Message);
@@ -529,7 +570,49 @@ namespace Castle.Facilities.WcfIntegration.Tests
 				}
 				catch
 				{
-					foreach (var log in memoryAppender.GetEvents())
+					var events = memoryAppender.GetEvents();
+					Assert.AreEqual(1, events.Length);
+					foreach (var log in events)
+					{
+						Assert.AreEqual("An error has occurred", log.RenderedMessage);
+						Assert.AreEqual("Oh No!", log.ExceptionObject.Message);
+					}
+				}
+			}
+		}
+
+		[Test]
+		public void Will_apply_multiple_error_handlers_to_service_explicitly()
+		{
+			using (RegisterLoggingFacility(new WindsorContainer())
+					.AddFacility<WcfFacility>(f => f.CloseTimeout = TimeSpan.Zero)
+					.Register(
+						Component.For<ErrorLogger>()
+							.Attribute("scope").Eq(WcfExtensionScope.Explicit),
+						Component.For<ErrorLogger>().Named("other")
+							.Attribute("scope").Eq(WcfExtensionScope.Explicit),
+						Component.For<IOperationsEx>().ImplementedBy<Operations>()
+						.DependsOn(new { number = 42 })
+						.AsWcfService(new DefaultServiceModel().AddEndpoints(
+							WcfEndpoint.BoundTo(new NetTcpBinding { PortSharingEnabled = true })
+								.At("net.tcp://localhost/Operations"))
+								.AddExtensions(typeof(ErrorLogger), "other")
+							)
+					))
+			{
+				var client = ChannelFactory<IOperationsEx>.CreateChannel(
+					new NetTcpBinding { PortSharingEnabled = true }, new EndpointAddress("net.tcp://localhost/Operations"));
+
+				try
+				{
+					client.ThrowException();
+					Assert.Fail("Should have raised an exception");
+				}
+				catch
+				{
+					var events = memoryAppender.GetEvents();
+					Assert.AreEqual(2, events.Length);
+					foreach (var log in events)
 					{
 						Assert.AreEqual("An error has occurred", log.RenderedMessage);
 						Assert.AreEqual("Oh No!", log.ExceptionObject.Message);
@@ -546,12 +629,14 @@ namespace Castle.Facilities.WcfIntegration.Tests
 					.Register(
 						Component.For<ErrorLogger>()
 							.Attribute("scope").Eq(WcfExtensionScope.Explicit),
+						Component.For<ErrorLogger>().Named("other")
+							.Attribute("scope").Eq(WcfExtensionScope.Explicit),
 						Component.For<IOperationsEx>().ImplementedBy<Operations>()
 						.DependsOn(new { number = 42 })
 						.AsWcfService(new DefaultServiceModel().AddEndpoints(
 							WcfEndpoint.BoundTo(new NetTcpBinding { PortSharingEnabled = true })
 								.At("net.tcp://localhost/Operations")
-								.AddExtensions(typeof(ErrorLogger)))
+								.AddExtensions(typeof(ErrorLogger), "other"))
 							)
 					))
 			{
@@ -565,7 +650,9 @@ namespace Castle.Facilities.WcfIntegration.Tests
 				}
 				catch
 				{
-					foreach (var log in memoryAppender.GetEvents())
+					var events = memoryAppender.GetEvents();
+					Assert.AreEqual(2, events.Length);
+					foreach (var log in events)
 					{
 						Assert.AreEqual("An error has occurred", log.RenderedMessage);
 						Assert.AreEqual("Oh No!", log.ExceptionObject.Message);
