@@ -3,6 +3,7 @@
 - implemented IOC-355 - Add a mechanism to mark constructors as unselectable for injection, much like DoNotWireAttribute is for property injection (contributed by Rory Plaire)
 - implemented IOC-353 - Add Classes.FromAssemblyInThisApplication() for parity with FromAssembly class
 
+- fixed FACILITIES-160 - Wcf Facility doesn't support multiple IErrorHandlers
 - fixed IOC-359 - Property filtering API is confusing and buggy
 - fixed IOC-356 - Specifying a hook should be enough to create an implementation-less proxy
 - fixed IOC-354 - Deadlock in pooled lifestyle under heavy load
